<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_second"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.zhouf.leo.hello2018.SecondActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_centerHorizontal="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/team_name"
                android:textSize="20sp"
                android:gravity="center"
                android:text="@string/tname_label" />

            <TextView
                android:text="0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="55sp"
                android:gravity="center"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:id="@+id/score" />

            <Button
                android:text="@string/btn3_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:onClick="btn3"
                android:id="@+id/btn3" />

            <Button
                android:text="@string/btn2_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:onClick="btn2"
                android:id="@+id/btn2" />

            <Button
                android:text="@string/btn1_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:onClick="btn1"
                android:id="@+id/btn1" />
        </LinearLayout>

        <TextView
            android:background="@android:color/darker_gray"
            android:layout_width="2dp"
            android:layout_marginBottom="24dp"
            android:layout_height="match_parent" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_centerHorizontal="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/team_name2"
                android:textSize="20sp"
                android:gravity="center"
                android:text="@string/tname_label" />

            <TextView
                android:text="0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="55sp"
                android:gravity="center"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:id="@+id/score2" />

            <Button
                android:text="@string/btn3_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:onClick="btn3"
                android:id="@+id/btn3b" />

            <Button
                android:text="@string/btn2_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:onClick="btn2"
                android:id="@+id/btn2b" />

            <Button
                android:text="@string/btn1_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:onClick="btn1"
                android:id="@+id/btn1b" />
        </LinearLayout>

    </LinearLayout>



    <Button
        android:text="@string/btn_reset_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reset"
        android:onClick="btnReset"
        android:layout_marginBottom="15dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
